[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/StartMenu/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/Intro/splash.png" type="Texture" id=4]
[ext_resource path="res://UI/Menus/MenuElements/FocusArrow/FocusArrow.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Animated Background"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0, 14 ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Story0" type="Sprite" parent="."]
position = Vector2( 956, 537 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 4 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Story0")
autoplay = "Animated Background"
playback_speed = 0.8
"anims/Animated Background" = SubResource( 1 )

[node name="FocusArrow" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainerText" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -596.0
margin_top = 113.0
margin_right = -188.0
margin_bottom = 551.0
custom_constants/separation = 45
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainerText"]
margin_top = 99.0
margin_right = 408.0
margin_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../QuitButton")
mouse_filter = 2
action_mode = 0
button_mask = 0
text = "Start"
flat = true

[node name="SettingsButton" type="Button" parent="VBoxContainerText"]
margin_top = 194.0
margin_right = 408.0
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
action_mode = 0
button_mask = 0
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainerText"]
margin_top = 289.0
margin_right = 408.0
margin_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_left = NodePath("../SettingsButton")
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_right = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../StartButton")
mouse_filter = 2
action_mode = 0
button_mask = 0
text = "Quit Game"
flat = true

[connection signal="pressed" from="VBoxContainerText/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainerText/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainerText/QuitButton" to="." method="_on_QuitButton_pressed"]
